第四周：定时器动画和轮播图

--- a/WEEK5/0508DAY1/css/banner-fade.css
+++ b/WEEK5/0508DAY1/css/banner-fade.css
@@ -70,6 +70,7 @@
     display: none;
     position: absolute;
     top: 50%;
+    z-index: 999;
     margin-top: -22.5px;
     width: 28px;
     height: 45px;
