--- a/WEEK6/0516DAY2/css/index.less
+++ b/WEEK6/0516DAY2/css/index.less
@@ -30,7 +30,7 @@ html, body {
   background: #FFF;
 }
 
-.loadingBox, .phoneBox {
+.loadingBox, .phoneBox, .messageBox {
   display: none;
   position: relative;
   height: 100%;
@@ -101,8 +101,6 @@ html, body {
 
 /*PHONE*/
 .phoneBox {
-  display: block;
-
   z-index: -2;
   background: url("../img/zf_phoneBg.jpg") no-repeat;
   background-size: cover;
@@ -191,5 +189,130 @@ html, body {
   }
   to {
     transform: scale(0);
+  }
+}
+
+/*MESSAGE*/
+.messageBox {
+  display: block;
+  background: #EAEAEA;
+
+  .wrapper {
+    position: absolute;
+    top: .2rem;
+    left: 0;
+    width: 100%;
+    transition: .3s;
+
+    li {
+      position: relative;
+      max-width: 3.6rem;
+      padding: .25rem;
+      margin-bottom: .4rem;
+      border-radius: .1rem;
+      line-height: .4rem;
+      font-size: .26rem;
+      opacity: 0;
+
+      &.active {
+        animation: messageListMove .3s linear both;
+      }
+
+      .pic {
+        position: absolute;
+        top: 0;
+        width: .82rem;
+        height: .82rem;
+        border-radius: 50%;
+      }
+
+      .arrow {
+        position: absolute;
+        top: .2rem;
+        width: .1rem;
+        height: .2rem;
+      }
+
+      &.self {
+        float: left;
+        margin-left: 1.25rem;
+        background: #FFF;
+        border: .02rem solid #CACACA;
+
+        .pic {
+          left: -1rem;
+        }
+
+        .arrow {
+          left: -.1rem;
+          background: url("../img/zf_messageArrow1.png") no-repeat;
+          background-size: 100% 100%;
+        }
+      }
+
+      &.inter {
+        float: right;
+        margin-right: 1.25rem;
+        background: #A2E45C;
+        border: .02rem solid #96B474;
+
+        .pic {
+          right: -1rem;
+        }
+
+        .arrow {
+          right: -.1rem;
+          background: url("../img/zf_messageArrow2.png") no-repeat;
+          background-size: 100% 100%;
+        }
+      }
+    }
+  }
+
+  .keyBoard {
+    position: absolute;
+    left: 0;
+    bottom: -.5rem;
+    box-sizing: border-box;
+    width: 100%;
+    height: 5.16rem;
+    background: url("../img/zf_messageKeyboard.png") no-repeat;
+    background-size: 100% 100%;
+
+    /*初始位置*/
+    transform: translateY(3.7rem);
+    transition: .3s;
+
+    span {
+      position: absolute;
+      left: .9rem;
+      top: .35rem;
+      width: 4rem;
+      height: .4rem;
+      line-height: .4rem;
+      font-size: .25rem;
+    }
+
+    .submit {
+      display: none;
+      position: absolute;
+      right: .1rem;
+      bottom: .6rem;
+      width: 1.47rem;
+      height: .74rem;
+      background: url("../img/zf_messageChat.png") no-repeat;
+      background-size: 100% 100%;
+    }
+  }
+}
+
+@keyframes messageListMove {
+  from {
+    transform: translateY(1rem);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0rem);
+    opacity: 1;
   }
 }
