--- a/WEEK12/KETANG/src/static/css/common.less
+++ b/WEEK12/KETANG/src/static/css/common.less
@@ -82,6 +82,7 @@ html {
   height: 1.06rem;
   line-height: 1.06rem;
   border-top: .02rem solid #D5D5D5;
+  background: #FFF;
 
   display: flex;
   a {
