--- a/WEEK12/KETANG/src/static/css/course.less
+++ b/WEEK12/KETANG/src/static/css/course.less
@@ -79,4 +79,37 @@
     }
   }
 
+  /*详情区域*/
+  .baseInfo {
+    padding: 0 .2rem;
+
+    video {
+      display: block;
+      width: 100%;
+      min-height: 3rem;
+      background: #000;
+    }
+
+    .content {
+      margin-top: .2rem;
+
+      h3 {
+        line-height: .6rem;
+      }
+
+      p {
+        line-height: .4rem;
+      }
+
+      span {
+        line-height: .6rem;
+        color: #9D0800;
+      }
+
+      button {
+        display: block;
+        margin-top: .2rem;
+      }
+    }
+  }
 }
