--- a/WEEK12/KETANG/src/static/css/Mycourse.less
+++ b/WEEK12/KETANG/src/static/css/Mycourse.less
@@ -5,6 +5,7 @@
     margin-top: .2rem;
 
     li {
+      position: relative;
       box-sizing: border-box;
       margin-bottom: .2rem;
       padding: .1rem;
@@ -15,6 +16,7 @@
         color: #000;
 
         h3 {
+          margin-left: .4rem;
           line-height: .6rem;
           font-size: .34rem;
         }
@@ -46,6 +48,12 @@
             }
           }
         }
+      }
+
+      input[type='checkbox'] {
+        position: absolute;
+        left: .1rem;
+        top: .25rem;
       }
     }
   }
